Fixed error for bgImage show on Firefox
Image would not go full-width.

--- a/src/assets/sass/laravel-uno-theme/_layout.scss
+++ b/src/assets/sass/laravel-uno-theme/_layout.scss
@@ -655,6 +655,7 @@ body {
 .bgImage {
     position: relative;
     overflow: hidden;
+    width: 100%;
     img {
         width: 100%;
         height: 100%;
